--- a/public/styles.css
+++ b/public/styles.css
@@ -5,11 +5,12 @@ body {
 }
 .content{
     background-color: #f0f0f0;
-    border: 10px solid black;
+    border: 10px solid #f0f0f0;
     border-radius: 7px;
     width: 800px;
     margin: 0 auto;
+    padding: 10px;
 }
 h1{
-    padding: 0 0 5px 0;
+    margin: 0 0 5px 0;
 }
